--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,19 @@ checkasm
 dataDec.txt
 log.dec
 
-obecli
+.deps/
+Makefile.in
+aclocal.m4
+autom4te.cache/
+#	build.txt
+config.status
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+missing
+obe/.deps/
+obe/Makefile
+obe/Makefile.in
+obe/obecli
