Only print histograms if the makefile.am is patched and told to do so

--- a/obe/Makefile.am
+++ b/obe/Makefile.am
@@ -3,8 +3,10 @@ GIT_VERSION := $(shell git describe --abbrev=8 --dirty --always --tags)
 
 BLACKMAGIC_SDK_PATH = $(top_srcdir)/include/decklink-sdk
 
+#HISTOGRAMS = -DPRINT_HISTOGRAMS=1
+
 CFLAGS += -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" -D_FILE_OFFSET_BITS=64 -O3 \
-	-D_BSD_SOURCE \
+	-D_BSD_SOURCE $(HISTOGRAMS) \
 	-I$(BLACKMAGIC_SDK_PATH) \
 	-I$(top_srcdir) \
 	-DKL_USERSPACE -D__STDC_FORMAT_MACROS \
