Checkin makefile comment

--- a/obe/Makefile.am
+++ b/obe/Makefile.am
@@ -3,6 +3,7 @@ GIT_VERSION := $(shell git describe --abbrev=8 --dirty --always --tags)
 
 BLACKMAGIC_SDK_PATH = $(top_srcdir)/include/decklink-sdk
 
+# This will be ignored of libklmonitoring is not installed in the system.
 #HISTOGRAMS = -DPRINT_HISTOGRAMS=1
 
 CFLAGS += -Wall -DVERSION=\"$(VERSION)\" -DPROG="\"$(PACKAGE)\"" -D_FILE_OFFSET_BITS=64 -O3 \
