Add framework changes and AC3Bitstream filter. These patches are not operable based on this patch alone, but they do describe the changes nicely. Additional patches are required to some existing functions, which I'm choosing to breakout into their own patches, followig this - with detailed descriptions.

--- a/obe/Makefile.am
+++ b/obe/Makefile.am
@@ -53,6 +53,9 @@ obecli_SOURCES += ../filters/video/video.c
 obecli_SOURCES += ../encoders/encoder_smoothing.c
 obecli_SOURCES += ../encoders/audio/lavc/lavc.c
 obecli_SOURCES += ../encoders/audio/mp2/twolame.c
+obecli_SOURCES += ../encoders/audio/ac3bitstream/ac3bitstream.c
+obecli_SOURCES += ../encoders/audio/ac3bitstream/audiobitstream_slicer.c
+obecli_SOURCES += ../encoders/audio/ac3bitstream/klringbuffer.c
 obecli_SOURCES += ../encoders/video/avc/x264.c
 obecli_SOURCES += ../common/network/udp/udp.c
 obecli_SOURCES += ../common/linsys/util.c
