--- a/obe/Makefile.am
+++ b/obe/Makefile.am
@@ -43,6 +43,7 @@ obecli_SOURCES += ../output/ip/ip.c
 obecli_SOURCES += ../input/sdi/ancillary.c
 obecli_SOURCES += ../input/sdi/sdi.c
 obecli_SOURCES += ../input/sdi/vbi.c
+obecli_SOURCES += ../input/sdi/smpte337_detector.c
 obecli_SOURCES += ../input/sdi/decklink/decklink.cpp
 obecli_SOURCES += ../input/sdi/linsys/linsys.c
 obecli_SOURCES += ../input/sdi/v4l2/v4l2.cpp
